Anonymise error messages by removing exception handling
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>